<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Touricity</string>
    <string name="package_name">il.ac.technion.touricity</string>
    <string name="content_authority">il.ac.technion.touricity</string>
    <string name="title_activity_search">Location results</string>
    <string name="title_activity_detail">Tour details</string>
    <string name="title_activity_create_tour">Create tour</string>
    <string name="title_activity_slots">Available slots</string>
    <string name="title_activity_create_slot">Create slot</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="dialog_login_title">Login</string>
    <string name="title_activity_manage_tours">Manage tours</string>
    <string name="title_activity_manage_slots">Manage slots</string>
    <string name="title_activity_slot_reservations">Reservations</string>
    <string name="title_activity_my_tours">My tours</string>
    <string name="title_activity_reservation_detail">Reservation detail</string>
    <string name="action_main">Main</string>
    <string name="action_search">Search</string>
    <string name="action_map">Map</string>
    <string name="action_my_tours">My tours</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_create_tour">Create tour</string>
    <string name="action_create_slot">Create slot</string>
    <string name="action_manage_tours">Manage tours</string>
    <string name="action_manage_slots">Manage slots</string>
    <string name="search_hint">Search cities, towns</string>
    <string name="search_not_found">Destination not found</string>
    <string name="signup_header">Create your profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_re_password">Re-enter password</string>
    <string name="prompt_checkbox">Are you a tour guide?</string>
    <string name="action_signup_short">Go</string>
    <string name="action_signup_btn">Create</string>
    <string name="signup_complete">Sign up complete</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_taken_email">This email is already taken</string>
    <string name="error_short_username">Minimum username length is 2 characters</string>
    <string name="error_invalid_username">Username must begin with a letter</string>
    <string name="error_taken_username">This username is already taken</string>
    <string name="error_short_password">Minimum password length is 6 characters</string>
    <string name="error_invalid_password">Password must contain at least one digit and one character</string>
    <string name="error_mismatch_password">This password doesn\'t match the re-entered password</string>
    <string name="error_signup_failed">Server ERROR: sign up failed</string>
    <string name="action_login_short">Go</string>
    <string name="action_login_button">Login</string>
    <string name="action_cancel_button">Cancel</string>
    <string name="prompt_username_email">Username or email</string>
    <string name="login_success">Login succeeded</string>
    <string name="error_login_credentials">Wrong username or password</string>
    <string name="action_logout_verify">Are you sure you want to logout?</string>
    <string name="action_logout_button">Logout</string>
    <string name="logout_success">Logged out</string>
    <string name="dialog_create_reservation_title">Create reservation</string>
    <string name="dialog_change_reservation_title">Change reservation</string>
    <string name="reserve_slot_msg">How many places would you like to reserve for this slot?</string>
    <string name="action_reserve_slot_button">Reserve</string>
    <string name="dialog_create_reservation_success">Reservation created successfully</string>
    <string name="dialog_change_reservation_success">Reservation changed successfully</string>
    <string name="dialog_create_reservation_fail">Server ERROR: Reservation failed</string>
    <string name="dialog_change_reservation_fail">Server ERROR: Reservation unchanged</string>
    <string name="find_destination">Search for a destination</string>
    <string name="tours_not_found">No tours found</string>
    <string name="tour_create">Create a new tour</string>
    <string name="action_view_slots">View Slots</string>
    <string name="action_delete_tour">Delete tour</string>
    <string name="tour_duration">Duration: <xliff:g id="duration">%s</xliff:g> minutes</string>
    <string name="tour_language">Language: <xliff:g id="language">%s</xliff:g></string>
    <string name="tour_location">Tour departs from: <xliff:g id="location">%s</xliff:g></string>
    <string name="slot_reserved">Reserved</string>
    <string name="slot_not_reserved">Not reserved</string>
    <string name="slot_capacity"><xliff:g id="vacant">%s</xliff:g> places left</string>
    <string name="slot_guide">Guided by <xliff:g id="guide_name">%s</xliff:g></string>
    <string name="slots_not_found">No slots found</string>
    <string name="slot_create">Create a new slot</string>
    <string name="slot_full">Unfortunately, this slot is fully occupied</string>
    <string name="slot_reserve_own">You cannot reserve your own slot</string>
    <string name="create_tour_header">Create tour</string>
    <string name="create_tour_title">Tour title</string>
    <string name="create_tour_language">Choose a language</string>
    <string name="create_tour_duration">Tour Duration (minutes)</string>
    <string name="create_tour_location">Tour departs from…</string>
    <string name="create_tour_description">Tour description</string>
    <string name="action_create_tour_short">Go</string>
    <string name="action_create_tour_btn">Create</string>
    <string name="error_positive_duration">Tour duration must be positive</string>
    <string name="error_create_tour_failed">Server ERROR: tour creation failed</string>
    <string name="create_slot_header">Create slot</string>
    <string name="create_slot_select">Select</string>
    <string name="create_slot_date">Select date</string>
    <string name="create_slot_time">Select time</string>
    <string name="create_slot_capacity">Slot capacity</string>
    <string name="action_create_slot_short">Go</string>
    <string name="action_create_slot_btn">Create</string>
    <string name="create_slot_created">Slot created</string>
    <string name="edit_slot_header">Edit slot</string>
    <string name="action_edit_slot_btn">Save</string>
    <string name="edit_slot_updated">Slot updated</string>
    <string name="error_date_passed">The selected date has passed</string>
    <string name="error_time_passed">The selected time has passed</string>
    <string name="error_positive_capacity">Slot capacity must be positive</string>
    <string name="error_create_slot_failed">Server ERROR: slot creation failed</string>
    <string name="language_english">English</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_italian">Italian</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_hebrew">Hebrew</string>
    <string name="preference_file_key" translatable="false">il.ac.technion.touricity.preference_file_key</string>
    <string name="pref_location_id_key" translatable="false">location_id</string>
    <string name="pref_location_name_key" translatable="false">location_name</string>
    <string name="pref_location_lat_key" translatable="false">location_lat</string>
    <string name="pref_location_long_key" translatable="false">location_long</string>
    <string name="pref_user_is_logged_in_key" translatable="false">user_is_logged_in</string>
    <string name="pref_user_id_key" translatable="false">user_id</string>
    <string name="pref_user_is_guide_key" translatable="false">user_is_guide</string>
    <string name="format_notification">
    New tours are available in <xliff:g id="location">%s</xliff:g>!
    </string>
    <string name="pref_notifications_label">Notifications</string>
    <string name="pref_notifications_key" translatable="false">notifications</string>
    <string name="pref_notifications_off">Off</string>
    <string name="pref_notifications_on">On</string>
    <string name="pref_sync_data_label">Sync data</string>
    <string name="pref_sync_data_key" translatable="false">sync_data</string>
    <string name="pref_sync_data_off">Off</string>
    <string name="pref_sync_data_on">On</string>
    <string name="pref_sync_interval_label">Sync interval</string>
    <string name="pref_sync_interval_key" translatable="false">sync_interval</string>
    <string name="pref_sync_interval_default">180</string>
    <string name="pref_sync_interval_summary">Every <xliff:g id="interval">%s</xliff:g> minutes</string>
    <string name="title_activity_login">Login</string>
    <string name="sync_account_type">touricity.technion.ac.il</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date"><xliff:g id="date">%1$s</xliff:g> at <xliff:g id="time">%2$s</xliff:g></string>
    <string name="developers">Developed by Liron Anavi and Ronen Miller.</string>
    <string name="technion">Touricity is a students project at the NSSL lab, faculty of EE, Technion.</string>
    <string name="advisor">Project advisor: Viktor Kulikov.</string>
    <string name="thanks">The developers would like to thank
        <a href="http://www.smashingmagazine.com/2014/06/freebie-ballicons-2-icon-set-png-psd-svg/">PixelBuddha</a> for the app\'s icon, and to
        <a href="http://www.smashingmagazine.com/2010/04/the-ultimate-free-web-designer-s-icon-set-750-icons-incl-psd-sources/">Oliver Twardowski</a>
        for the flags icons.</string>
    <string name="app_version">Version 1.0</string>
    <string name="dialog_delete_tour_title">Delete tour?</string>
    <string name="dialog_delete_tour_description">Only tours which currently don\'t have open slots can be deleted.</string>
    <string name="action_delete_tour_cancel">Cancel</string>
    <string name="action_delete_tour_confirm">Delete</string>
    <string name="dialog_delete_tour_success">Tour deleted successfully</string>
    <string name="dialog_delete_tour_fail">Server ERROR: tour deletion failed</string>
    <string name="manage_slot_reserved"><xliff:g id="reserved">%1$s</xliff:g>/<xliff:g id="capacity">%2$s</xliff:g></string>
    <string name="slot_reservations_departs">Tour departs <xliff:g id="date">%1$s</xliff:g> at <xliff:g id="time">%2$s</xliff:g></string>
    <string name="slot_reservations_list">Reservations list</string>
    <string name="slot_reservations_email">Email</string>
    <string name="slot_reservations_reserved">Reserved</string>
    <string name="slot_reservations_total">Total</string>
    <string name="action_delete_slot">Delete slot</string>
    <string name="action_edit_slot">Edit slot</string>
    <string name="slot_reservations_canceled">Slot canceled</string>
    <string name="slot_reservations_completed">Tour completed</string>
    <string name="dialog_delete_slot_title">Delete slot?</string>
    <string name="dialog_delete_slot_description">Cancellation emails will be sent automatically to users who reserved this slot.</string>
    <string name="action_delete_slot_cancel">Cancel</string>
</resources>