<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->

    <org.jraf.android.backport.switchwidget.SwitchPreference
        android:title="@string/pref_notifications_label"
        android:key="@string/pref_notifications_key"
        android:switchTextOff="@string/pref_notifications_off"
        android:switchTextOn="@string/pref_notifications_on"
        android:defaultValue="true"
        tools:ignore="UnusedAttribute" />

    <org.jraf.android.backport.switchwidget.SwitchPreference
        android:title="@string/pref_sync_data_label"
        android:key="@string/pref_sync_data_key"
        android:switchTextOff="@string/pref_sync_data_off"
        android:switchTextOn="@string/pref_sync_data_on"
        android:defaultValue="true"
        tools:ignore="UnusedAttribute" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <il.ac.technion.touricity.CustomEditTextPreference
        android:title="@string/pref_sync_interval_label"
        android:key="@string/pref_sync_interval_key"
        android:defaultValue="@string/pref_sync_interval_default"
        android:inputType="number"
        android:maxLength="4"
        android:singleLine="true"
        android:dependency="@string/pref_sync_data_key" />

</PreferenceScreen>
