<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never"
        android:orderInCategory="2" />

    <item android:id="@+id/action_signup"
        android:title="@string/action_signup"
        app:showAsAction="never"
        android:orderInCategory="3" />

    <item android:id="@+id/action_my_tours"
        android:title="@string/action_my_tours"
        app:showAsAction="never"
        android:orderInCategory="4"
        android:visible="false" />

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        android:orderInCategory="5"
        android:visible="false" />

</menu>
