<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:orderInCategory="1" />

    <item android:id="@+id/action_map"
        android:title="@string/action_map"
        android:icon="@drawable/ic_location_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        android:orderInCategory="2" />

    <item android:id="@+id/action_signup"
        android:title="@string/action_signup"
        app:showAsAction="never"
        android:orderInCategory="3" />

    <item android:id="@+id/action_login"
        android:title="@string/action_login"
        app:showAsAction="never"
        android:orderInCategory="3" />

</menu>
