<!-- Master layout. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="il.ac.technion.touricity.CreateTourFragment">

    <!-- Create tour progress -->
    <ProgressBar
        android:id="@+id/create_tour_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/signup_scrollview_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_tour_layout_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/create_tour_header"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/touricity_teal" />

            <!-- The actionNext key performs a "next" operation, taking the user to the
            next field that will accept text. Corresponds to IME_ACTION_NEXT. -->
            <EditText
                android:id="@+id/create_tour_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/create_tour_title"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium" />

            <Spinner
                android:id="@+id/create_tour_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:prompt="@string/create_tour_language" />

            <EditText
                android:id="@+id/create_tour_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/create_tour_duration"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/create_tour_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/create_tour_location"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/create_tour_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/create_tour_description"
                android:imeActionId="@+id/action_create_tour_id"
                android:imeActionLabel="@string/action_create_tour_short"
                android:imeOptions="actionUnspecified"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium"
                android:inputType="textMultiLine"
                android:lines="6"
                android:minLines="4"
                android:gravity="top|left"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/create_tour_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:text="@string/action_create_tour_btn"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAppearance="?android:textAppearanceButton"
                android:background="@drawable/btn_touricity" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

