<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="il.ac.technion.touricity.LoginDialogFragment">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_linear_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_login_title"
                android:textColor="@color/touricity_teal"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/login_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/prompt_username_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/action_login_id"
                android:imeActionLabel="@string/action_login_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:fontFamily="sans-serif"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/login_wrong_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:layout_gravity="center"
                android:text="@string/error_login_credentials"
                android:textColor="@color/red"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">

            <Button
                android:id="@+id/login_signup_btn"
                style="?android:textAppearanceSmall"
                android:minWidth="64dp"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/action_signup"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAppearance="?android:textAppearanceButton"
                android:background="@drawable/btn_dialog_touricity"
                android:textColor="@color/touricity_teal" />

            <Button
                android:id="@+id/login_submit_btn"
                style="?android:textAppearanceSmall"
                android:minWidth="64dp"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/action_login_button"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAppearance="?android:textAppearanceButton"
                android:background="@drawable/btn_dialog_touricity"
                android:textColor="@color/touricity_teal" />

            <Button
                android:id="@+id/login_cancel_btn"
                style="?android:textAppearanceSmall"
                android:minWidth="64dp"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_toLeftOf="@id/login_submit_btn"
                android:layout_toStartOf="@id/login_submit_btn"
                android:text="@string/action_cancel_button"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAppearance="?android:textAppearanceButton"
                android:background="@drawable/btn_dialog_touricity"
                android:textColor="@color/touricity_teal" />

            </RelativeLayout>

        </LinearLayout>

</LinearLayout>
