<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="il.ac.technion.touricity.LoginDialogFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/list_item_slot_icon_framelayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo_about"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/developers"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/technion"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/advisor"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/about_thanks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/thanks"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:text="@string/app_version"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceSmall" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
