<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="il.ac.technion.touricity.LogoutDialogFragment">

    <LinearLayout
        android:id="@+id/logout_linear_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/action_logout_verify"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp">

            <Button
                android:id="@+id/logout_submit_btn"
                style="?android:textAppearanceSmall"
                android:minWidth="64dp"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/action_logout_button"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAppearance="?android:textAppearanceButton"
                android:background="@android:color/transparent"
                android:textColor="@color/touricity_teal" />

            <Button
                android:id="@+id/logout_cancel_btn"
                style="?android:textAppearanceSmall"
                android:minWidth="64dp"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_toLeftOf="@id/logout_submit_btn"
                android:layout_toStartOf="@id/logout_submit_btn"
                android:text="@string/action_cancel_button"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAppearance="?android:textAppearanceButton"
                android:background="@android:color/transparent"
                android:textColor="@color/touricity_teal" />

            </RelativeLayout>

        </LinearLayout>

</LinearLayout>
